# OOP_Project

./: CMakeLists.txt  Czlowiek.cpp  Czlowiek.h  Kasa.cpp  Konto.cpp  Konto.h  Pracownik.cpp  Pracownik.h  Programista.cpp  Programista.h  Student.cpp  Student.h  main.cpp
